[package]
name = "aggr_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.3"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }
dioxus = "0.4.0"
dioxus-tui = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.16"
prost = "0.10.3"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tonic = "0.7.2"
tungstenite = "0.17.2"
url = "2.2.2"
dioxus-desktop = "0.4.0"
futures-util = "0.3.28"

[[bin]]
name = "aggr-server"
path = "src/main.rs"

[[bin]]
name = "aggr-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.7.2"
